# RocketLeague-RL-Bot

./: CMakeLists.txt  REBUILD_AND_TRAIN.bat  START_TRAINING.bat  START_TRAINING_SIMPLE.bat  export_model.py
src/: ExampleMain - Backup.cpp  ExampleMain - Copy (2).cpp  ExampleMain - Copy.cpp  ExampleMain - OLD.cpp  ExampleMain.cpp  ExampleMain_BACKUP2.cpp  ExampleMain_OLD_BACKUP.cpp
src/old/: ExampleMain_3.cpp  ExampleMain_4.cpp  ExampleMain_BACKUP.cpp  ExampleMain_wait.cpp
training/: QUICK_START.md  ROCKETSIMVIS_SETUP.md  config.yaml  rewards.py  setup_training.bat  train.py
